--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -7,6 +7,8 @@ html(lang='en')
     meta(name=name, content=content)
     title #{title}
 
+    link(rel='stylesheet', href='/static/css/styles.css')
+
     block pageSpecificCSS
 
   body
