--- a/client/containers/home/home.scss
+++ b/client/containers/home/home.scss
@@ -1,4 +1,9 @@
 form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   .input-container {
     label {
