--- a/client/containers/home/home.scss
+++ b/client/containers/home/home.scss
@@ -5,11 +5,50 @@ form {
   justify-content: center;
   align-items: center;
   text-align: center;
-  .input-container {
-    label {
-      margin-right: 1.5rem;
+  .form-container {
+    .form-row {
+      position: relative;
+      margin-top: 30px;
+      margin-inline: auto;
+      max-width: 400px;
+      .floating-label {
+        position: absolute;
+        left: 15px;
+        top: 11px;
+        background: #fff;
+        color: #43454e;
+        pointer-events: none;
+        transform-origin: left center;
+        transition: transform 250ms;
+        font-family:
+          Arial,
+          Helvetica,
+          sans-serif serif;
+      }
+      .input {
+        line-height: 1.5rem;
+        border-radius: 5px;
+        width: 100%;
+        padding: 8px 5px;
+        padding-right: 30px;
+        border: 1px solid #ddd;
+        font-size: 20px;
+        transition: 0.2s ease all;
+        &:focus {
+          outline: none;
+          ~ .floating-label {
+            top: -8px;
+            font-size: 13px;
+          }
+        }
+      }
+      margin-top: 1.5rem;
+      margin-bottom: 1.5rem;
+      .show-password-label {
+        margin-right: 1rem;
+      }
     }
-    margin-bottom: 1.5rem;
+
     .input-error {
       margin-top: 0.85rem;
       color: #f00;
@@ -32,5 +71,8 @@ form {
       border-radius: 8px;
       margin: 0 auto;
     }
+  }
+  .text {
+    margin-top: 1.5rem;
   }
 }
