--- a/client/containers/register/register.scss
+++ b/client/containers/register/register.scss
@@ -1,16 +1,14 @@
-form {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+.container {
+  h2 {
+    text-align: center;
+  }
   .form-container {
     .form-row {
       position: relative;
       margin-top: 30px;
       margin-inline: auto;
-      max-width: 400px;
+      max-width: 700px;
+      width: 700px;
       .floating-label {
         position: absolute;
         left: 15px;
@@ -24,6 +22,9 @@ form {
           Arial,
           Helvetica,
           sans-serif serif;
+        transition: 0.2s ease all;
+        -moz-transition: 0.2s ease all;
+        -webkit-transition: 0.2s ease all;
       }
       .input {
         line-height: 1.5rem;
@@ -45,6 +46,9 @@ form {
           top: -8px;
           font-size: 13px;
         }
+        &.error {
+          border-color: #f00;
+        }
       }
       margin-top: 1.5rem;
       margin-bottom: 1.5rem;
@@ -56,27 +60,25 @@ form {
     .input-error {
       margin-top: 0.85rem;
       color: #f00;
+      text-align: left;
     }
-  }
-  .button-container {
-    margin: 0 auto;
-    text-align: center;
-    .input-button {
-      &:hover {
-        background-color: darken(cornflowerblue, 25%);
-      }
-      cursor: pointer;
-      border: none;
-      background: cornflowerblue;
-      color: white;
-      padding: 12px 24px;
-      margin: 8px;
-      font-size: 1.5rem;
-      border-radius: 8px;
+    .button-container {
       margin: 0 auto;
+      text-align: center;
+      .input-button {
+        &:hover {
+          background-color: darken(cornflowerblue, 25%);
+        }
+        cursor: pointer;
+        border: none;
+        background: cornflowerblue;
+        color: white;
+        padding: 12px 24px;
+        margin: 8px;
+        font-size: 1.5rem;
+        border-radius: 8px;
+        margin: 0 auto;
+      }
     }
-  }
-  .text {
-    margin-top: 1.5rem;
   }
 }
