--- a/client/containers/home/home.scss
+++ b/client/containers/home/home.scss
@@ -26,6 +26,7 @@ form {
           sans-serif serif;
       }
       .input {
+        position: relative;
         line-height: 1.5rem;
         border-radius: 5px;
         width: 100%;
@@ -48,6 +49,14 @@ form {
         &.error {
           border-color: #f00;
         }
+      }
+      .toggle-password {
+        position: absolute;
+        top: 25%;
+        right: 5px;
+        font-size: 0.8rem;
+        cursor: pointer;
+        color: blue;
       }
       margin-top: 1.5rem;
       margin-bottom: 1.5rem;
