--- a/client/containers/register/register.scss
+++ b/client/containers/register/register.scss
@@ -50,6 +50,14 @@
           border-color: #f00;
         }
       }
+      .toggle-password {
+        position: absolute;
+        top: 25%;
+        right: 5px;
+        font-size: 0.8rem;
+        cursor: pointer;
+        color: blue;
+      }
       margin-top: 1.5rem;
       margin-bottom: 1.5rem;
       .show-password-label {
