--- a/client/components/chatFooter/ChatFooter.scss
+++ b/client/components/chatFooter/ChatFooter.scss
@@ -1,27 +1,27 @@
 .chat-footer {
   padding: 10px;
   background-color: #f9f5eb;
-  height: 10vh;
+  height: 90px;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  align-content: flex-start;
-  flex-direction: row;
+  .chat-footer__typing-text {
+    padding-left: 5px;
+  }
   form {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: row wrap;
     .chat-footer__message-input {
-      display: inline-block;
-      width: 70%;
-      height: 100%;
+      width: 86%;
       border-radius: 10px;
       border: 1px solid #ddd;
       outline: none;
       padding: 15px;
+      margin-right: 5px;
     }
     .chat-footer__message-button {
-      display: inline-block;
+      margin-top: 2px;
       width: 150px;
       background-color: green;
       padding: 10px;
